--- a/WishList/Views/Item/Create.cshtml
+++ b/WishList/Views/Item/Create.cshtml
@@ -1,12 +1,9 @@
-﻿@using WishList.Models
+﻿@model WishList.Models.Item
 
 <h3>Add item to wishlist</h3>
+
 <form asp-action="create">
     <input asp-for="Description"/>
     <span asp-validation-for="Description"></span>
     <button type="submit">Add Item</button>
 </form>
-
-@{
-    var items = new List<Item>();
-}
